# document-graph-loader

./: .env.example  .gitignore  README.md  devbox.json  docker-compose.yaml  generate-company-data-abc.ipynb  pyproject.toml
seed_data/: chart_of_accounts_and_cost_center.json  client_portfolio.json  company.txt  customer_crm_profiles.json  employees.json  recurring_operating_expenses.json  revenue_and_pricing_structure.json  sales_performance.json  vendor_profiles.json
src/calculators/: __init__.py  commision_calculator.py
src/generators/: __init__.py  generate_contracts.py  generate_invoices.py  generate_payrolls.py  generate_vendor_contracts.py  generate_vendor_invoices.py
src/graph/: __init__.py  apply_schema.py  document_entity_extractor_agent.py  extraction_schema.py  loader.py  schema.cypher
src/lib/: llama_parse.py
